# mc-draft-tool

./: .gitignore  LICENSE  README.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/models/: simulation.py
backend/app/tests/: debug_run_simulation.py
deploy/: compose.yaml  menu.sh
deploy/nginx/: nginx.conf
docs/: architecture.md  getting-started.md
frontend/: .env.example  .gitignore  Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  data.js  index.css
frontend/src/components/: Canvas.js  Output.js  ResultsPanel.js  Settings.js  Sidebar.js
frontend/src/components/svgs/archive/: ChimneySVG.js  ElbowSVG.js  PipeSVG.js  TeeSVG.js
frontend/src/config/: api.js
